--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="mbuto.crypto.casket"
+          package="oss.crypto.casket"
           android:versionCode="1"
           android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/cc_launcher">
-        <activity android:name="CasketLogin"
+        <activity android:name=".CasketLogin"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
