--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,5 +11,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SecretList"
+                  android:label="@string/app_name">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".CasketLogin" />
+         </activity>
     </application>
 </manifest>
