--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,5 +16,10 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".CasketLogin" />
          </activity>
-    </application>
+        <activity android:name=".SecretActivity"
+                  android:label="@string/app_name">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".SecretList" />
+         </activity>
+        </application>
 </manifest>
