--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="oss.crypto.casket"
           android:versionCode="1"
           android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="15"/>
     <application android:label="@string/app_name" android:icon="@drawable/cc_launcher">
         <activity android:name=".CasketLogin"
                   android:label="@string/app_name">
