--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="oss.crypto.casket"
           android:versionCode="1"
-          android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="15"/>
-    <application android:label="@string/app_name" android:icon="@drawable/cc_launcher">
+          android:versionName="1.1">
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="23"/>
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name" 
+        android:icon="@drawable/cc_launcher">
         <activity android:name=".CasketLogin"
                   android:label="@string/app_name">
             <intent-filter>
