--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,9 @@
           package="oss.crypto.casket"
           android:versionCode="1"
           android:versionName="1.1">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="23"/>
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="23"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:label="@string/app_name" 
